# hackathon-techxplosion

./: Justfile  flake.nix  main.py  oppgave.md  org.org  pyproject.toml
backend/: CLAUDE.md  Justfile  analysis.py  building_zone.py  energy_zone.py  flake.nix  floor_zone.py  main.py  models.py  pyproject.toml  room_zone.py  sample_building.py  sensors.py  simulation.py
backend/analysis/: __init__.py  adjacency.py  heat_flow.py  history.py  root_cause.py
backend/analysis/thermal/: __init__.py  adaptive.py  anomaly.py  cooling_curve.py  data_quality.py  estimation.py  graph.py  heat_flow_analysis.org  heat_flow_analysis.py  rc_model.py  test_realistic.py  test_thermal.py  test_with_simulation.py  types.py
backend/core/: __init__.py  models.py  sensors.py
backend/core/zones/: __init__.py  actions.py  base.py  building.py  floor.py  metrics.py  patterns.py  room.py
backend/data/: __init__.py  electricity_price.py  sample_building.py  sample_temperature.json  weather.py
backend/services/: prediction.py
backend/simulation/: __init__.py  config.py  config_builder.py  environment.py  generator.py  placement.py  room_config.py  room_state.py  scenarios.py
building-dashboard/: index.html
building-dashboard/src/: App.css  App.tsx  index.css
building-dashboard/src/components/: DashboardStyles.css  FloorGrid.tsx  FloorPlan.tsx  SavingsCounter.tsx  Sparkline.tsx
building-dashboard/src/hooks/: index.ts  useMetrics.ts
building-dashboard/src/mocks/: building.ts
building-dashboard/src/types/: index.ts
frontend/: flake.nix  package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: Dashboard.tsx  DashboardStyles.css  EditorStyles.css  EventFeed.tsx  FloorGrid.tsx  FloorPlan.tsx  FloorPlanEditor.tsx  SavingsCounter.tsx
frontend/src/hooks/: useBuilding.ts  useElectricityPrice.ts  useMetrics.ts  useMetricsHistory.ts  useMockMetrics.ts
frontend/src/mocks/: building-1.json  building.ts
frontend/src/types/: index.ts
frontend/src/utils/: colors.ts
main/: .gitignore  CLAUDE.md  flake.nix  pyproject.toml
