[project]
name = "hackathon-techxplosion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.129.0",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
    "numpy>=2.0.0",
    "scipy>=1.14.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.37.4",
    "ruff>=0.15.0",
]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = [
    "F",     # pyflakes (real errors)
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear (common gotchas)
    "SIM",   # flake8-simplify
    "C4",    # flake8-comprehensions
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",   # line length (let formatter handle it)
    "SIM108", # don't force ternary expressions
]

[tool.basedpyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
reportUnnecessaryTypeIgnoreComment = "error"
reportMatchNotExhaustive = "error"
reportDeprecated = "warning"
